<resources>
    <string name="app_name">Coffee and code</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="name_hint">Enter Name Here</string>
    <string name="age_prompt">Enter Age Here</string>
    <string name="action_settings">Settings</string>
    <string name="exp_prompt">Enter Experience Here</string>
    <string name="hint_about_yourself">Write about yourself here</string>

    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="languages">Languages</string>
    <string name="experience">Experience</string>
    <string name="free_days">Free days</string>
    <string name="free_times">Free times</string>
    <string name="age">Age</string>
    <string name="code_amp_coffee"><![CDATA[Code &  Coffee]]></string>
    <string name="user_name">User Name</string>
    <string name="or">Or...</string>
    <string name="find_me">Find Me!</string>
    <string name="javascript">Javascript</string>
    <string name="java">Java</string>
    <string name="php">PHP</string>
    <string name="python">Python</string>
    <string name="c_sharp">C#</string>
    <string name="c_plus">C++</string>
    <string name="ruby">Ruby</string>
    <string name="css">CSS</string>
    <string name="c">C</string>
    <string name="objective_c">Objective-C</string>
    <string name="days_im_free">Days I\'m free</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="times_im_free">Times I\'m free</string>
    <string name="morn">Morn</string>
    <string name="a_noon">A/noon</string>
    <string name="eve">Eve</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="about_me">About me</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="website">Website</string>
    <string name="website_hint">Enter Website URL</string>
    <string name="github_hint">Enter GitHub URL</string>
    <string name="camera">Camera</string>
    <string name="gallery">Choose Pic</string>
    <string name="zipcode_hint">e.g. zipcode, street, or city</string>
    <string name="location">Location</string>
    <string name="header2">Connect with others who share you passion for coding</string>
    <string name="header3">Simply complete you profile and reach out to a new friend</string>


    <string-array name="age_array">
        <item>18-25</item>
        <item>26-35</item>
        <item>36+</item>
    </string-array>

    <string-array name="exp_array">
        <item>0-2 years</item>
        <item>2-4 years</item>
        <item>4-6 years</item>
        <item>6-8 years</item>
        <item>8 years+</item>
    </string-array>

    <string-array name="temp_names_array">
        <item>James Murphy</item>
        <item>Keannu Reaves</item>
        <item>Justin Trudeau</item>
        <item>Jim Carey</item>
        <item>Ryan Gosling</item>
    </string-array>

    <string-array name="temp_names_array_2">
        <item>William Shatner</item>
        <item>Justin Bieber</item>
        <item>Michael J. Fox</item>
    </string-array>

    <string-array name="temp_description_array">
        <item>Placeholder for James Murphy profile description......placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder </item>
        <item>Placeholder for Keannu Reaves  profile description</item>
        <item>Placeholder for Justin Trudeau  profile description</item>
        <item>Placeholder for Jim Carey  profile description</item>
        <item>Placeholder for Ryan Gosling  profile description</item>
    </string-array>

    <string-array name="temp_description_array_2">
        <item>Placeholder for William Shatner profile description......placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder </item>
        <item>Placeholder for Justin Bieber  profile description</item>
        <item>Placeholder for Michael J. Fox  profile description</item>
    </string-array>


</resources>
