<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_image"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/myImageView"
            android:layout_alignLeft="@id/myImageView"
            android:layout_alignStart="@id/myImageView"
            android:layout_alignRight="@id/myImageView"
            android:layout_alignEnd="@id/myImageView"
            android:layout_alignTop="@id/myImageView"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lines="3"
            android:text="@string/code_amp_coffee"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            android:textColor="@color/White"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myImageView"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/header2"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="10dp"
            android:text="@string/header3"
            android:textSize="17sp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"

            />


    </RelativeLayout>

</ScrollView>